# peptide_cutter

./: .gitignore  Cleavage_rules and reference.md  Cleavage_rules.md  G3P_HUMAM_P04406.fasta  README.md  cleavage_rules.json  index.html  peptide_cutter_cli.py  peptides.fasta  pyproject.toml  run.py  run.sh
.devcontainer/: devcontainer.json
peptide_cutter/: __init__.py  aggregate.py  cleavage_rules.json  cli.py  engine.py  make_enzyme_txts.py  merge_part4_txts.py  part4.py  render.py  rules.py  sequence.py
peptide_cutter/utils/: __init__.py  html_report.py  make_enzyme_txts.py  merge_part4_txts.py
tests/: test_engine.py  test_render.py  test_rules.py  test_sequence.py
tests/fixtures/: rules.json
