[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "peptide-cutter"
version = "0.1.0"
description = "PeptideCutter: cleavage site prediction"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "PeptideCutter"}]

[project.scripts]
peptide-cutter = "peptide_cutter.cli:main"

[tool.setuptools]
packages = ["peptide_cutter", "peptide_cutter.utils"]

[tool.setuptools.package-data]
peptide_cutter = ["cleavage_rules.json"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
